--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean": "rimraf ./lib",
     "lint": "eslint . --ext .js",
     "lint:fix": "npm run lint -- --fix",
-    "prepublish": "npm run clean && npm run build && npm run lint"
+    "prepublishOnly": "npm run clean && npm run build && npm run lint"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
