--- a/package.json
+++ b/package.json
@@ -15,21 +15,35 @@
     "clean": "rimraf ./lib",
     "lint": "eslint . --ext .js",
     "lint:fix": "npm run lint -- --fix",
+    "test": "ava",
+    "test:watch": "npm run test -- --watch",
     "prepublishOnly": "npm run clean && npm run build && npm run lint"
   },
   "devDependencies": {
+    "ava": "^0.18.2",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.13.2",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.16.0",
+    "bluebird": "^3.5.0",
     "cross-env": "^3.1.4",
     "eslint": "^3.15.0",
     "eslint-config-invincible": "^1.0.0",
     "rimraf": "^2.5.4",
     "webpack": "^1.13.1"
+  },
+  "ava": {
+    "files": [
+      "test/index.js"
+    ],
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
   },
   "author": "Chikara Chan",
   "homepage": "https://github.com/chikara-chan/babel-plugin-react-scope-binding",
