--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint:fix": "npm run lint -- --fix",
     "test": "ava",
     "test:watch": "npm run test -- --watch",
-    "prepublishOnly": "npm run clean && npm run build && npm run lint"
+    "precommit": "npm run lint && npm run test",
+    "prepublishOnly": "npm run clean && npm run build && npm run lint && npm run test"
   },
   "devDependencies": {
     "ava": "^0.18.2",
@@ -25,6 +26,7 @@
     "babel-core": "^6.13.2",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.23.0",
@@ -33,6 +35,7 @@
     "cross-env": "^3.1.4",
     "eslint": "^3.15.0",
     "eslint-config-invincible": "^1.0.0",
+    "husky": "^0.13.3",
     "rimraf": "^2.5.4",
     "webpack": "^1.13.1"
   },
