--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "babel-plugin-react-scope-binding",
   "version": "1.1.3",
-  "description": "Babel plugin for React component to make event handler auto binding to context.",
+  "description": "Babel plugin for React component to take event handler to bind context automatically.",
   "keywords": [
     "babel-plugin"
   ],
